volvi a cambiar el bootstrap

--- a/2p/practica1.html
+++ b/2p/practica1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="boostrap/css  js/js/bootstrap.bundle.min.js">
+    <link rel="stylesheet" href="boostrap/css  js/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/practica1.css">
 </head>
 <body>
